--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "douyu tv danmu module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "ava"
   },
   "repository": {
     "type": "git",
@@ -24,5 +24,10 @@
   "bugs": {
     "url": "https://github.com/BacooTang/douyu-danmu/issues"
   },
-  "homepage": "https://github.com/BacooTang/douyu-danmu#readme"
+  "homepage": "https://github.com/BacooTang/douyu-danmu#readme",
+  "devDependencies": {
+    "ava": "^0.23.0",
+    "coveralls": "^3.0.0",
+    "nyc": "^11.3.0"
+  }
 }
