--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "ava": "^0.23.0",
     "coveralls": "^3.0.0",
-    "nyc": "^11.3.0"
+    "nyc": "^11.3.0",
+    "socks-proxy-agent": "*"
   }
 }
