--- a/package.json
+++ b/package.json
@@ -1,12 +1,10 @@
 {
   "name": "douyu-danmu",
-  "version": "1.1.9",
+  "version": "2.0.0",
   "description": "douyu tv danmu module",
   "main": "index.js",
   "scripts": {
-    "test": "ava",
-    "report": "nyc ava --verbose && nyc report --reporter=html",
-    "coverage": "nyc report --reporter=text-lcov | coveralls"
+    "test": ""
   },
   "repository": {
     "type": "git",
@@ -18,20 +16,15 @@
     "danmu"
   ],
   "dependencies": {
-    "request": "*",
-    "request-promise": "*",
     "socks": "^2.1.2",
-    "socks-proxy-agent": "*"
+    "request": "^2.83.0",
+    "request-promise": "^4.2.2",
+    "socks-proxy-agent": "^3.0.1"
   },
   "author": "BacooTang",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/BacooTang/douyu-danmu/issues"
   },
-  "homepage": "https://github.com/BacooTang/douyu-danmu#readme",
-  "devDependencies": {
-    "ava": "^0.23.0",
-    "coveralls": "^3.0.0",
-    "nyc": "^11.3.0"
-  }
+  "homepage": "https://github.com/BacooTang/douyu-danmu#readme"
 }
